tests/js_error/source_locations/expression/super_call/default_super_call.exp
Error: 
  ┌ source_locations/expression/super_call/default_super_call.js:3:11
  |
3 |     throw new Error()
  |           ^
Stack trace:
  at B (source_locations/expression/super_call/default_super_call.js:3:11)
  at C (source_locations/expression/super_call/default_super_call.js:7:1)
  at <global> (source_locations/expression/super_call/default_super_call.js:10:1)